welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: '(' expected but identifier found.
  if nbBaggles>2:
     ^Poucet:6: error: illegal start of simple expression
		gauche();avance(5)
                        ^Poucet:7: error: ';' expected but 'else' found.
	else
        ^