welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
while (!sortieTrouvee()){
	var nbBaggles=0
  for (k <- 1 to 5)
  	nbBaggles=nbBaggles+1
  if nbBaggles>2:
		gauche();avance(5)
	else
  	droite();avance(5)
}
avance()